[tool.poetry]
name = "langchain-visualizer"
version = "0.0.29"
description = "Visualization and debugging tool for LangChain workflows"
authors = ["Amos Jun-yeung Ng <me@amos.ng>"]
readme = "README.md"
packages = [{include = "langchain_visualizer"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = ">=0.0.226,<0.1"
ought-ice = "^0.5.0"
fvalues = "^0.0.4"
gorilla = "^0.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pytest = "^7.2.1"
openai = "^0.27.0"
vcr-langchain = "^0.0.28"
google-search-results = "^2.4.1"
faiss-cpu = "^1.7.3"
tiktoken = "^0.3.3"
autoflake = "^2.0.1"
pytest-asyncio = "^0.21.0"
playwright = "^1.34.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "network: marks tests as requiring network services",
]
filterwarnings = [
    "error",
    'ignore:There is no current event loop:DeprecationWarning',
    'ignore:distutils Version classes are deprecated:DeprecationWarning',
    'ignore:unclosed <ssl.SSLSocket:ResourceWarning',
    'ignore:Dialect sqlite:sqlalchemy.exc.SAWarning',
    'ignore::sqlalchemy.exc.MovedIn20Warning',
    # avoid "UserWarning: A newer version of deeplake (3.6.7) is available."
    'ignore::UserWarning',
    "ignore:invalid escape sequence:DeprecationWarning"
]

[tool.mypy]
ignore_missing_imports = "True"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
